<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidKalkulator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    
	<string name="operation_minus">-</string>
	<string name="operation_plus">+</string>
	<string name="operation_multiply">x</string>
	<string name="operation_divide">/</string>
	<string name="operation_modulo">mod</string>
	<string name="operation_sqrt">sqrt</string>
	<string name="operation_1x">1/x</string>
	<string name="operation_proc">%</string>
	<string name="operation_pow">^</string>
	<string name="operation_sin">sin</string>
	<string name="operation_cos">cos</string>
	<string name="operation_tg">tg</string>
	<string name="operation_ctg">ctg</string>
	<string name="operation_ln">lg(x)</string>
	<string name="operation_log">log</string>
	<string name="operation_gcd">nwd</string>
	<string name="operation_factorial">n!</string>
	
	
	<string name="const_pi">pi</string>
	<string name="const_e">e</string>
	<string name="const_phi">phi</string>
	
	
	
	<string name="other_dot">.</string>
	<string name="main_enter">=</string>
	<string name="other_setPlusMinus">+/-</string>
	
	
	<string name="main_delete">DEL</string>
	<string name="main_allClear">AC</string>
	<string name="value_large_start">0</string>
	<string name="value_start_large">0</string>
	<string name="value_start_medium">0</string>
	<string name="value_start_small">0</string>
	<string name="value_operation">"   "</string>
	<string name="main_clearExisting">CE</string>
    

</resources>
